samples/_failures_safe/1761714234_8ecaef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97f22527.c: In function ‘main’:
./samples/SAFE/__tmp_97f22527.c:155: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_97f22527.c:154:17: error: expected declaration or statement at end of input
  154 |                 if
      |                 ^~
./samples/SAFE/__tmp_97f22527.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_97f22527.c:154:17: error: expected declaration or statement at end of input
